# FSloume

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  config.ini  main.cpp  main.h  slime.cpp  slime.h
android/: .gitignore  Android.mk  AndroidManifest.xml  Application.mk  Makefile  build.gradle  local.properties
doc/math/: main.tex
game/: background.cpp  background.h  ball.cpp  ball.h  board.cpp  board.h  button.cpp  button.h  cloud.cpp  cloud.h  cloudzone.cpp  cloudzone.h  config.cpp  config.h  counter.cpp  counter.h  dangerpt.cpp  dangerpt.h  eye.cpp  game.cpp  game.h  game2.cpp  game2.h  ia.cpp  ia.h  input.cpp  input.h  menu.cpp  menu.h  net.cpp  net.h  particlegenerator.cpp  particlegenerator.h  path.cpp  path.h  rc_manager.cpp  rc_manager.h  shockwave.cpp  shockwave.h  slime.cpp  (+7 more)
game/entities/: ball.cpp  ball.h  cloudzone.cpp  cloudzone.h  dangerpt.h  eye.cpp  eye.h  net.h  particlegenerator.cpp  particlegenerator.h  path.cpp  path.h  shockwave.cpp  shockwave.h  slime.cpp  slime.h
game/tools/: ia.cpp  ia.h  input.cpp  input.h  unique_drawable.cpp  unique_drawable.h  utils.cpp  utils.h
game/ui/: background.cpp  background.h  button.cpp  button.h  counter.cpp  counter.h  menu.cpp  menu.h  target.cpp  target.h
src/: ball.cpp  ball.h  eye.cpp  eye.h  game.cpp  game.h  input.h  main.cpp  main.h  net.h  slime.cpp  slime.h  unique_drawable.h  utils.cpp  utils.h
src-old/: ball.h  net.h
tests/: collideTwoSegments.cpp  isTriangleDirect.cpp  sf_vector2f_operators.cpp
tools/: generate_config.py  objectify.py
(+5 files in other folders)
